# vectorcade-render-wgpu

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
docs/: ai_agent_instructions.md  architecture.md  design.md  plan.md  prd.md  status.md
vectorcade-render-wgpu/: Cargo.toml
vectorcade-render-wgpu/src/: lib.rs  null.rs  renderer.rs  stats.rs  tessellate.rs
vectorcade-render-wgpu/src/wgpu_backend/: buffers.rs  mod.rs  pipeline.rs  state.rs  text.rs
vectorcade-render-wgpu/tests/: headless_render.rs  integration.rs  null_renderer.rs  tessellate.rs
