[package]
name = "vectorcade-render-wgpu"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "WGPU renderer backend for VectorCade."

[dependencies]
vectorcade-shared = { version = "0.1.0" }

# Backend deps (agent will flesh this out)
wgpu = { version = "0.20", optional = true }
lyon = { version = "1.0", optional = true }

[features]
default = []
wgpu-backend = ["dep:wgpu", "dep:lyon"]

[dev-dependencies]
glam = "0.27"
