[package]
name = "vectorcade-render-wgpu"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "WGPU renderer backend for VectorCade."

[dependencies]
vectorcade-shared = { version = "0.1.0" }
lyon = "1.0"

# wgpu is optional until we build the full backend
wgpu = { version = "0.20", optional = true }

[features]
default = []
wgpu-backend = ["dep:wgpu"]

[dev-dependencies]
glam = "0.27"
