[package]
name = "vectorcade-render-wgpu"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "WGPU renderer backend for VectorCade."

[dependencies]
vectorcade-shared = { version = "0.1.0" }
vectorcade-fonts = { version = "0.1.0", optional = true }
lyon = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.27"

# wgpu is optional until we build the full backend
wgpu = { version = "0.20", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }

[features]
default = []
wgpu-backend = ["dep:wgpu", "dep:vectorcade-fonts"]

[dev-dependencies]
glam = "0.27"
